--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,18 @@
   }
 
 
+.scrollable-container {
+  max-height: 70vh; /* Adjust the height as needed */
+  overflow-y: auto;
+  padding-right: 8px; /* Optional for better spacing with scrollbar */
+}
+.scrollable-container-100{
+  max-height: 80vh; /* Adjust the height as needed */
+  overflow-y: auto;
+  padding-right: 8px; 
+  min-height: 80vh
+}
+
 @layer utilities{
   .badge {
     @apply inline-flex items-center  text-sm font-semibold rounded px-2 py-2;
